k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: jasongoldhill.valr-test.com
  - http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-service
            port:
              number: 5000
